<resources>
    <string name="app_name">OPETest</string>
    <string name="sign_out">Sign out</string>
    <string name="show_questions">Show selected questions</string>
    <string name="do_test">Do Quiz</string>
    <string name="do_random_test">Do random quick Test</string>
    <string name="question">Question</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good Job</string>
    <string name="fair">Fair</string>
    <string name="finish_game">Finish Game</string>
    <string name="keep_trying">Keep trying!</string>
    <string name="no_questions_selected">No questions selected</string>
    <string name="do_quiz">Do quiz again?</string>
    <string name="do_quiz_and_delete">Data will be deleted. Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="include_questions">Include questions:</string>
    <string name="no_answer">No answer</string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="how_many_question">How many questions?</string>
    <string name="start_from_question">Start from question</string>
    <string name="really_finish_game">Are you sure you want to finish game? Data will be saved. Press cancel to review your answers</string>
    <string name="time_up_title">Time\'s up</string>
    <string name="time_up_message">Time\'s up! Try again an enjoy your learning!</string>
    <string name="ok">Ok</string>
    <string name="no_questions_selected_message">There\'s no questions suitable for the selected options</string>
    <string name="more">More</string>
    <string name="no_clues">No clues available</string>
    <string name="loader0" translatable="false">0</string>
    <string name="loader0of0" translatable="false">100/100</string>
    <string name="loader0p" translatable="false">0%</string>
    <string name="about">About</string>
    <string name="about_author">About de author</string>
    <string name="signed_in">\"Signed in! Mode Online activated\"</string>
    <string name="sign_in_cancelled">\"Signing in cancelled! Mode Offline activated!\"</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="loading">Loading</string>
    <string name="cancel_activate_offline">switch to OFFLINE mode</string>
    <string name="change_user">Change User</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Preference Titles -->
    <string name="general_settings_header">General Settings</string>
    <string name="quicktest_header">Quick Test options</string>

    <!-- General Preferences -->
    <string name="activate_mode_online_title">Activate mode Online</string>
    <string name="online_mode_summary">Online mode</string>
    <string name="offline_mode_summary">Offline mode</string>

    <string name="on_right_answer_move_to_next_title">On right answer move to next question</string>
    <string name="move_to_next_summary_on">Move to next</string>
    <string name="move_to_next_summary_off">Stay in current question</string>

    <!-- QuickTest Preferences -->
    <string name="numberofquestions_title">Number of Questions</string>
    <string name="timeout_title">Timeout counter value (minutes) </string>


    <string name="online_mode_key" translatable="false">online_mode</string>
    <string name="on_right_move_to_next_key" translatable="false">on_right_move_to_next</string>
    <string name="quicktest_number_of_questions_key" translatable="false">quicktest_number_of_question</string>
    <string name="quicktest_timeout_key" translatable="false">quicktest_timeout</string>
    <string name="invalid_num_questions">Please select a number between 1 and 120</string>
    <string name="invalid_value">Please select a valid value</string>
    <string name="invalid_timeout">Please select a number between 1 and 60</string>
    <string name="user_cancel_load">Loading paused! If you are suffering some conection issues you may want to change to Offline mode on the Settings menu.</string>
</resources>
