<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_settings_header">

        <!-- <EditTextPreference
             app:key="signature"
             app:title="@string/signature_title"
             app:useSimpleSummaryProvider="true" />-->

        <!-- <ListPreference
               app:defaultValue="online"
               app:entries="@array/mode_entries"
               app:entryValues="@array/mode_values"
               app:key="mode"
               app:title="@string/mode_title"
               app:useSimpleSummaryProvider="true" />-->


        <SwitchPreferenceCompat
            app:key="@string/online_mode_key"
            app:summaryOff="@string/offline_mode_summary"
            app:summaryOn="@string/online_mode_summary"
            app:title="@string/activate_mode_online_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="@string/on_right_move_to_next_key"
            app:summaryOff="@string/move_to_next_summary_off"
            app:summaryOn="@string/move_to_next_summary_on"
            app:title="@string/on_right_answer_move_to_next_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/quicktest_header">

        <!--   <SwitchPreferenceCompat
               app:key="quicktest"
               app:title="@string/numberofquestions_title" />

           <SwitchPreferenceCompat
               app:dependency="sync"
               app:key="attachment"
               app:summaryOff="@string/attachment_summary_off"
               app:summaryOn="@string/attachment_summary_on"
               app:title="@string/attachment_title" />

               -->

        <!-- TODO inputType does not work -->

        <EditTextPreference
            android:defaultValue="false"
            android:digits="0123456789"
            android:inputType="numberDecimal"
            app:defaultValue="30"
            app:key="@string/quicktest_number_of_questions_key"
            app:title="@string/numberofquestions_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:digits="0123456789"
            android:inputType="numberDecimal"
            app:defaultValue="6"
            app:key="@string/quicktest_timeout_key"
            app:title="@string/timeout_title"
            app:useSimpleSummaryProvider="true" />

        <!-- TODO add vibrate or not -->

    </PreferenceCategory>

</PreferenceScreen>
