<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--  <item
          android:id="@+id/signing_menu"
          android:title="@string/sign_in"
          android:icon="@drawable/ic_person_black_24dp"
          app:showAsAction="ifRoom|withText">
      </item>

      <item
          android:id="@+id/settings_menu"
          android:title="@string/settings"
          app:showAsAction="never"/>
      <item
          android:id="@+id/about_menu"
          android:title="@string/about"
          app:showAsAction="never"/>    -->

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/signing_menu"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/change_user"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/settings_menu"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/about_menu"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>