<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".TestOverviewActivity">


    <LinearLayout
        android:layout_margin="8dp"
        android:baselineAligned="false"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_progress"
                android:layout_marginStart="20dp"
                android:text="@string/loader0p"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_result"
                android:background="@drawable/border_bg"
                android:textAlignment="center"
                android:text="@string/excellent"
                android:padding="16dp"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_right_answer_and_total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                android:text="@string/loader0of0"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_show_questions"
            android:text="@string/show_questions"
            style="?android:attr/buttonBarButtonStyle"
            android:drawableTop="@drawable/ic_remove_red_eye_black_24dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp" />

        <Button
            android:id="@+id/btn_do_test"
            android:text="@string/do_test"
            style="?android:attr/buttonBarButtonStyle"
            android:drawableTop="@drawable/ic_assignment_black_24dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp" />

        <Button
            android:id="@+id/btn_random_test"
            android:text="@string/do_random_test"
            style="?android:attr/buttonBarButtonStyle"
            android:drawableTop="@drawable/ic_access_alarm_black_24dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp" />





    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_filter_total"
            android:drawableStart="@drawable/ic_format_align_justify_black_24dp"
            android:text="@string/loader0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_filter_right_answer"
            android:drawableStart="@drawable/ic_check_black_24dp"
            android:text="@string/loader0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_filter_wrong_answer"
            android:drawableStart="@drawable/ic_clear_black_24dp"
            android:text="@string/loader0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_filter_no_answer"
            android:drawableStart="@drawable/ic_error_outline_black_24dp"
            android:text="@string/loader0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_question_list_grid"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </ScrollView>


</LinearLayout>